# crazygoat

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
debian/: .gitignore  changelog  control  copyright  rules
examples/array/: array.cpp
examples/hello/: filters.cpp  hello-world.cpp
include/crazygoat/: App.h  Array.h  Attribute.h  AttributesList.h  Filter.h  Request.h
include/crazygoat/Array/: Array.h  ArrayHelper.h
include/crazygoat/Helpers/: StringHelper.h  UrlHelper.h
include/crazygoat/Parsers/: HttpParserAbstract.h  QueryParser.h
src/: App.cpp  App.h  Attribute.cpp  Attribute.h  AttributesList.cpp  AttributesList.h  Filter.cpp  Filter.h  Request.cpp  Request.h  Response.cpp  Response.h
src/Array/: Array.cpp  ArrayHelper.cpp
src/Attributes/: Attribute.cpp  AttributesList.cpp  AttributesList.h
src/Filters/: Filter.cpp  Filter.h
src/Helpers/: StringHelper.cpp  UrlHelper.cpp
src/Parsers/: QueryParser.cpp
test/: .gitignore  CMakeLists.txt  test-request-hello.cpp
